# CL-Clip-Adapter

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  model.py  run_basic_experiments.py  run_experiments.py  run_mtil_experiment.py  train.py
src/basic/: dataset.py  run_basic_experiment.py
src/model/: model.py  model_utils.py  train.py
src/mtil/: dataset_config.py  dataset_utils.py  run_mtil_experiment.py
